--- a/src/component/Components.css
+++ b/src/component/Components.css
@@ -10,3 +10,68 @@
     background-color: rgba(230, 237, 238,0.4);
     border-radius: 30px ;
 }
+.Component_TextBlock
+{
+    width: 60% ;
+    margin-left: 5%;
+    margin-top: 30px;
+    margin-bottom: 30px ;
+    height: 50px;
+
+
+    font-size: large ; 
+    font-family: Microsoft Yahei ,STXihei;
+
+    text-align: left;
+    line-height: 50px ;
+    padding-left: 5%;
+    border-radius: 30px ;
+    background-color: white;
+}
+.Component_TextEdit
+{
+    width: 60% ;
+    margin-left: 5%;
+    margin-top: 30px;
+    margin-bottom: 30px ;
+    height: 50px;
+
+    font-size: large ; 
+    font-family: Microsoft Yahei ,STXihei;
+
+    text-align: left;
+    line-height: 50px ;
+    padding-left: 5%;
+    border-radius: 30px ;
+    background-color: white;
+
+    border: 2px solid black;
+}
+.Component_TextEdit:focus
+{
+    border: 3px solid black;
+}
+/* Shared property end */
+.Location_Edit
+{
+    float: right;
+}
+/* .locationBlock
+{
+    padding-top: 10px;
+    height: 100px;
+} */
+.Edit_Btn
+{
+    float: right;
+}
+.Edit_Block
+{
+    padding-top: 10px;
+    height: 100px;
+}
+.Edit_TextBlock
+{
+    overflow-x: hidden;
+    overflow-y: auto;
+}
