improve the css file 's structure . Now it will follow the components or views that use it more tightly

--- a/src/component/TopBar.css
+++ b/src/component/TopBar.css
@@ -63,7 +63,7 @@
     height: 40px ;
     border-radius: 50%;
     border: transparent;
-    background: url("../Source/SearchBtn.png") no-repeat center / contain;
+    background: url("../../Source/SearchBtn.png") no-repeat center / contain;
 }
 #SearchInput
 {
