Update the login and register . Update the cart interact with the backEnd

--- a/src/Page.css
+++ b/src/Page.css
@@ -191,3 +191,10 @@
 
     border: 1px solid grey;
 }
+
+.warning
+{
+    color: red;
+    font-family: Microsoft Yahei ,STXihei;
+    font-weight: bold;
+}
