--- a/src/component/OrderUnit.css
+++ b/src/component/OrderUnit.css
@@ -90,3 +90,16 @@
     color: grey;
     font-size: small;
 }
+
+.OrderUnit_Items
+{
+    display: block;
+    width: 50%;
+    margin-left: 5%;
+    height: 100%;
+
+    float: left;
+
+    overflow-y :auto ; 
+    overflow-x : hidden;
+}
