--- a/src/View/Page.css
+++ b/src/View/Page.css
@@ -66,12 +66,16 @@
     width: 10%;
     padding-top: 8px;
 
-    background-color: rgba(224, 255, 255, 0.9);
+    /* background-color: rgba(224, 255, 255, 0.9); */
+    background-color: aliceblue;
     border: none;
     border-radius: 20px;
 
     overflow: hidden;
     cursor: pointer;
+
+    font-family: Microsoft Yahei ,STXihei;
+    font-weight: bold;
 }
 
 #Information_SideBar,.Page_SideBar
@@ -270,4 +274,50 @@
 .FileInput
 {
     display: none;
+}
+
+.Page_InputForm
+{
+    width: 50%;
+    height: 50px;
+    margin-bottom: 30px;
+
+    border-radius: 30px;
+    padding-left: 5%;
+
+    border: 1px solid grey;
+}
+
+.Page_InputTextArea
+{
+    width: 50%;
+    height: 100px;
+    margin-bottom: 30px;
+
+    border-radius: 30px;
+    padding-left: 5%;
+
+    border: 1px solid grey;
+    resize: none;
+}
+
+.Line_Title
+{
+    font-size: 20px;
+    font-family: Microsoft Yahei ,STXihei;
+
+    letter-spacing: 3px;
+    font-weight: bolder;
+
+    text-align:left;
+    padding-left: 5%;
+}
+
+.Date_Selector
+{
+    height: 50px;
+
+    font-size: large;
+    font-weight: bold;
+    font-family: Microsoft Yahei ,STXihei;
 }
