--- a/src/View/Order.css
+++ b/src/View/Order.css
@@ -2,7 +2,7 @@
 {
     display: block;
     margin-top: 30px;
-    margin-left: 17%;
+    margin-left: 15%;
 }
 
 .Order_SelectorTitle
@@ -25,4 +25,8 @@
     margin-left: 5%;
     position: relative;
     top:15px ; 
+}
+.Statistic_Title
+{
+    clear: both;
 }
